frontend: Fix jumping scrollbar issue

--- a/src/index.scss
+++ b/src/index.scss
@@ -23,6 +23,7 @@ body {
     -moz-osx-font-smoothing: grayscale;
     padding-top: 100px;
     padding-bottom: 50px;
+    overflow-y: scroll;
 }
 
 code {
